--- a/src/style.scss
+++ b/src/style.scss
@@ -189,30 +189,35 @@ $darkColor:#3d0a43;
                         opacity: 0.4;
                     }
                 }
+                .notFound {
+                    padding: 10px;
+                    font-size: 13px;
+                    color: black;
+                }
                 .userChat {
                     padding: 10px;
                     display: flex;
                     align-items: center;
                     gap: 10px;
                     color: black;
-
+                    
                     &:hover {
-                        background-color:#e5e9fa;
+                        background-color:#f4def3;
                         border-left: 5px solid purple;
                     }
                     img {
-                        width: 50px;
-                        height: 50px;
+                        width: 40px;
+                        height: 40px;
                         border-radius: 50%;
                         object-fit: cover;
                     }
                     .userChatInfo {
                         span {
-                            font-size: 18px;
+                            font-size: 16px;
                             font-weight:500;
                         }
                         p{
-                            font-size: 14px;
+                            font-size: 12px;
                             color: lightgray;
                         }
                     }
