--- a/src/style.scss
+++ b/src/style.scss
@@ -99,9 +99,21 @@ $darkColor:#3d0a43;
     background-color: $darkColor;
     height: 100vh;
     display: flex;
+    flex-direction: column;
+    gap:20px;
     align-items: center;
     justify-content: center;
 
+    .logo {
+        color: white;
+        font-size: 24px;
+        font-weight: bold;
+        font-family: 'Times New Roman', Times, serif;
+        background-image:linear-gradient(120deg, #cf78df 0%, #4e126e 100%);
+        padding: 10px 20px;
+        border-radius: 10px;
+        
+    }
     .container {
         background-color: #f4def3;
         border-radius: 20px;
@@ -123,18 +135,11 @@ $darkColor:#3d0a43;
 
             .navbar {
                 display: flex;
+                justify-content: space-between;
                 align-items: center;
                 height: 50px;
                 padding: 10px;
-                justify-content: space-between;
                 color:black;
-
-                .logo {
-                    font-weight: bold;
-                    @include tablet{
-                        display:none;
-                    }
-                }
 
                 .user {
                     display: flex;
@@ -149,13 +154,14 @@ $darkColor:#3d0a43;
                     }
 
                     button {
-                        background-color: #5d5b8d;
+                        background-color: #4e126e;
                         color: #ddddf7;
                         font-size: 10px;
+                        font-weight: bold;
                         border: none;
                         cursor: pointer;
                         border-radius: 10px;
-                        padding: 2px 5px;
+                        padding: 0px 5px;
                         @include tablet{
                             position: absolute;
                             bottom: 10px;
@@ -240,6 +246,18 @@ $darkColor:#3d0a43;
                 justify-content: space-between;
                 padding: 10px;
                 color:black ;
+
+                .user {
+                    display: flex;
+                    align-items: center;
+                    gap: 10px;
+                    img{
+                        height: 30px;
+                        width: 30px;
+                        border-radius: 50%;
+                        object-fit: cover;
+                    }
+                }
 
                 .chatIcons {
                     display: flex;
@@ -339,8 +357,19 @@ $darkColor:#3d0a43;
                     display: flex;
                     align-items: center;
                     gap:10px;
-                    right:0;
 
+                    img{
+                    position: relative;
+
+                    }
+
+                }
+                .emoji {
+                    position: absolute;
+                    bottom:7rem;
+                    right: 50px;
+                    width: 350px;
+                    height: 350px;
                 }
                 img {
                     height: 20px;
@@ -349,7 +378,7 @@ $darkColor:#3d0a43;
                     color: #808081;
                 }
 
-                button {
+                .sendbtn {
                     height: 40px;
                     width: 40px;
                     border: none;
