--- a/src/style.scss
+++ b/src/style.scss
@@ -152,26 +152,83 @@ $darkColor:#3d0a43;
                         border-radius: 50%;
                         object-fit: cover;
                     }
+                }
+                
+                .logout {
+                    background-color: #4e126e;
+                    color: #ddddf7;
+                    font-size: 10px;
+                    font-weight: bold;
+                    border: none;
+                    cursor: pointer;
+                    border-radius: 10px;
+                    padding: 5px 10px;
+                    // @include tablet{
+                        position: absolute;
+                        bottom: 10px;
+                    // }
+                }
 
-                    button {
-                        background-color: #4e126e;
-                        color: #ddddf7;
-                        font-size: 10px;
-                        font-weight: bold;
+            }
+
+            .settings{
+                position: absolute;
+                top: 50px;
+                padding: 5px;
+                background-color: #ffffff;
+                width:90%;
+                border: 1px solid #d5c6d6;
+                border-radius: 5px;
+
+                form{
+                    display: flex;
+                    flex-direction: column;
+                    gap:15px;
+        
+                    span {
+                        color:black;
+                        font-size: 12px;
+                    }
+                    input {
+                        padding: 8px;
+                        margin: 5px;
                         border: none;
-                        cursor: pointer;
-                        border-radius: 10px;
-                        padding: 0px 5px;
-                        @include tablet{
-                            position: absolute;
-                            bottom: 10px;
+                        border-bottom: 1px solid#6a2265 ;
+                        &::placeholder {
+                            color: rgb(175,175,175);
                         }
-
+                    }
+        
+                    button {
+                        background-color: #611969;
+                        color: white;
+                        padding: 5px;
+                        border: none;
+                        font-weight: bold;
+                        cursor: pointer;
+                        margin: 5px;
+                    }
+        
+                    label {
+                        display: flex;
+                        align-items: center;
+                        gap: 10px;
+                        color: #000000;
+                        font-size: 12px;
+                        cursor: pointer;
+                        margin: 5px;
+                        
+                        img {
+                            width: 32px;
+                            height: 32px;
+                            opacity: 0.5;
+                        
+                        }
                     }
                 }
             }
             .search,.chats{
-                border-bottom: 1px solid gray;
+                border-bottom: 2px solid #d5c6d6;
 
                 .searchForm {
                     padding: 10px;
@@ -239,6 +296,16 @@ $darkColor:#3d0a43;
             flex:2;
             margin-left: 20px;
             
+            .msg {
+                display: flex;
+                justify-content: center;
+                margin:auto;
+                background-color: rgba(0, 0, 0, 0.1);
+                border-radius: 20px;
+                padding: 2px;
+                width: 300px;
+                margin-top: 10rem;
+            }
             .chatInfo {
                 height: 50px;
                 display: flex;
@@ -266,6 +333,8 @@ $darkColor:#3d0a43;
                     img {
                         height: 20px;
                         cursor: pointer;
+                        background-color: rgba(50, 42, 51, 0.1);
+                        border-radius: 50px;
                     }
                 }
             }
@@ -360,16 +429,14 @@ $darkColor:#3d0a43;
 
                     img{
                     position: relative;
-
+                    
                     }
 
                 }
                 .emoji {
                     position: absolute;
-                    bottom:7rem;
-                    right: 50px;
-                    width: 350px;
-                    height: 350px;
+                    right: 13rem;
+                    bottom: 6rem;
                 }
                 img {
                     height: 20px;
