--- a/src/style.scss
+++ b/src/style.scss
@@ -69,6 +69,30 @@ $darkColor:#3d0a43;
                 border: none;
                 font-weight: bold;
                 cursor: pointer;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                .animate-spin {
+                    animation: spin 1s linear infinite;
+                }
+
+                @keyframes spin {
+                    from {
+                      transform: rotate(0deg);
+                    }
+                    to {
+                      transform: rotate(360deg);
+                    }
+                }
+
+                .loader-circle {
+                    width: 20px;
+                    height: 20px;
+                    border: 2px solid #ffffff;
+                    border-top: 2px solid transparent;
+                    border-radius: 50%;
+                  }
             }
 
             label {
