--- a/src/style.scss
+++ b/src/style.scss
@@ -137,7 +137,7 @@ $darkColor:#3d0a43;
         color: white;
         font-size: 24px;
         font-weight: bold;
-        font-family: 'Times New Roman', Times, serif;
+        font-family: "Ga Maamli", sans-serif;
         background-image:linear-gradient(120deg, #cf78df 0%, #4e126e 100%);
         padding: 10px 20px;
         border-radius: 10px;
